# low--level--lab

./: .gitignore  DEFENSE.md  README.md  pyproject.toml  run_test.sh
.github/workflows/: ci.yml
examples/01_hello/: output.golden  source.alg
examples/02_cat/: output.golden
examples/03_hello_user_name/: output.golden  source.alg
examples/04_sort/: output.golden
examples/05_test_simple/: output.golden
examples/06_double_precision/: output.golden  source.alg
examples/07_vector_demo/: output.golden
examples/08_euler4_scalar/: output.golden  source.alg
programs/: cat.alg  double_precision.alg  euler4.alg  euler4_vector.alg  hello.alg  hello_user_name.alg  sort.alg  test_simple.alg  vector_demo.alg
scripts/: generate_golden_tests.py
src/isa/: __init__.py  decoder.py  encoder.py  encoding.py  instructions.py
src/lang/: __init__.py  ast.py  lexer.py  parser.py
src/processor/: __init__.py  datapath.py  microcode.py  simulator.py
src/processor/microcode/: __init__.py  microcode.py
src/translator/: codegen.py
src/utils/: binary_io.py  image.py
tests/golden/cat/: config.json  log.golden  output.golden  source.alg
tests/golden/double_precision/: config.json  source.alg
tests/golden/euler4_scalar/: config.json  log.golden  output.golden  source.alg
tests/golden/euler4_vector/: config.json  source.alg
tests/golden/hello/: config.json  debug.txt  log.golden  log.txt  output.golden  source.alg
tests/golden/hello_user_name/: config.json  log.golden  (+2 more)
tests/unit/: test_isa_simulator.py  test_lang.py  test_processor.py
tools/: compile.py  run.py
(+9 files in other folders)
